--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -313,7 +313,145 @@
       background-color: #f0f0f0;
       color: #111;
       } 
-
+ /* LOGIN Content */
+      .forms-out {
+      margin: 0 auto;
+      padding: 0;
+      font-size:14px;
+      }
+      .forms-in {
+      width: 100%;
+      margin: 0 auto;
+      color: white;
+      padding: 0;
+      font-size:14px;
+      }
+      .forms-in div {
+      padding: 0;
+      max-width: 350px;
+      margin: 0 auto;      
+      border-radius: 5px;
+      margin-bottom: 15px;
+      }
+      .forms-in h3 {
+      text-align: center;
+      }
+      .forms-in input {
+      border: none;
+      width: 100%;
+      margin-bottom: 15px;
+      padding: 10px;
+      box-sizing: border-box;
+      border-radius: 3px;
+      }
+      .forms-in button {
+      border: none;
+      padding: 7px 20px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+      margin-top:10px;
+      margin-bottom:15px;
+      }
+      .forms-in button:hover {
+      opacity: 0.7;
+      }
+      .hide {
+      display: none;
+      }
+      #forgot-password {
+      cursor: pointer;
+      }
+      #forgot-password:hover {
+      opacity: 0.7;
+      }
+      #show-register {
+      cursor: pointer;
+      }
+      #show-register:hover {
+      opacity: 0.7;
+      }
+      #show-login {
+      cursor: pointer;
+      }
+      #show-login:hover {
+      opacity: 0.7;
+      }
+      /* The Modal (background) */
+      .modal {
+      display: block; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 2; /* Sit on top */
+      padding-top: 150px; /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.2); /* Black w/ opacity */
+      }
+      .modal-login {
+      display: block; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 3; /* Sit on top */
+      padding-top: 150px; /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.1); /* Black w/ opacity */
+      }
+      .lock-screen {
+      display: block; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      padding-top: 150px; /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.3); /* Black w/ opacity */
+      }	  
+      /* Modal Content */
+      .modal-content {
+      line-height:1.4;
+      border-radius: 5px;
+      background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;
+      color:#ddd;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid #444;
+      width: 400px;
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+      font-weight:bold;
+      }
+      .modal-content p {
+      padding:0;
+      margin:5px 5px 0 17px;
+      display:list-item;
+      line-height:2.0;
+      list-style: disc;
+      }
+      /* The Close Button */
+      .close {
+      color: #aaaaaa;
+      float: right;
+      font-size: 30px;
+      font-weight: bold;
+      margin-top:-20px;
+      margin-right:-10px;
+      }
+      .close:hover,
+      .close:focus {
+      color: orange;
+      text-decoration: none;
+      cursor: pointer;
+      } 
 	  
      </style> 
  <link rel="stylesheet" href="./login/login.css">
@@ -334,7 +472,7 @@
         <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
         <span style="font-weight:normal;font-size:14px">USER-ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
         <span style="font-weight:normal; font-size:14px"> - VERIFIED: [ <span id="email_Verified"></span> ]</span>
-        <button id="verify" style="width:100px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:green" >Verify Now!</button>
+        <button id="verify" style="width:100px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:green">Verify Now!</button>
       </div>
     </div>
     <div id="wrap">
@@ -477,6 +615,7 @@
         </div>
       </div>
     </div>
+    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"></div>	
     <div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
@@ -533,10 +672,8 @@
         </div>
     </div>
     </div>
-	<script src="./login/login.js"></script>		
+	<script src="./login/login.js"></script>
     <script>
-	
-
     function _0x80db(_0x596fdf,_0x3f4962){var _0x2e8c5d=_0x2e8c();return _0x80db=function(_0x80dbf0,_0x2caf6a){_0x80dbf0=_0x80dbf0-0x18a;var _0x348048=_0x2e8c5d[_0x80dbf0];return _0x348048;},_0x80db(_0x596fdf,_0x3f4962);}(function(_0x5c86f1,_0x322aca){var _0x4ebe4c=_0x80db,_0xa024e=_0x5c86f1();while(!![]){try{var _0x5562dd=-parseInt(_0x4ebe4c(0x1b2))/0x1*(parseInt(_0x4ebe4c(0x1a3))/0x2)+parseInt(_0x4ebe4c(0x1a8))/0x3+parseInt(_0x4ebe4c(0x197))/0x4*(-parseInt(_0x4ebe4c(0x19f))/0x5)+parseInt(_0x4ebe4c(0x1b5))/0x6+parseInt(_0x4ebe4c(0x18b))/0x7+-parseInt(_0x4ebe4c(0x18f))/0x8*(parseInt(_0x4ebe4c(0x1b6))/0x9)+-parseInt(_0x4ebe4c(0x191))/0xa*(parseInt(_0x4ebe4c(0x198))/0xb);if(_0x5562dd===_0x322aca)break;else _0xa024e['push'](_0xa024e['shift']());}catch(_0x271cab){_0xa024e['push'](_0xa024e['shift']());}}}(_0x2e8c,0xd15e8));function _0x2e8c(){var _0x538480=['rate-down-burst-threshold','931830oESiBp','up-interval-bonus','result-down-burst-threshold','result-down-limit-at','8154aAdrtf','for-up-burst-limit2','result-up-limit-at','for-up-burst-duration2','down-interval-bonus','3432351KfitKg','for-up-burst-duration','for-up-burst-limit','value','getElementById','replace','rate-down-burst-limit','for-up-burst-threshold','for-down-burst-limit2','rate-up-burst-limit','333TfuPjo','result-up-burst-limit','rate-down-burst-time','9467388GfNdtH','115254FmzOIu','rate-up-burst-time','result-up-burst-threshold','pbun','ceil','toUpperCase','rate-down-limit-at','down-max-limit','for-down-burst-threshold','for-down-burst-duration2','match','buananet','7435225Zvmzjb','rate-down-max-limit','for-down-burst-time','github','592FHDSNH','for-down-burst-duration','10qPxdMe','/mikrotik-burst-limit-calculator.html','rate-up-burst-threshold','for-down-burst-limit','result-up-burst-time','up-speed-bonus','12OZSLCV','684541SlBlds','new-burst-up','innerHTML','rate-up-limit-at','for-up-burst-time','result-down-burst-limit'];_0x2e8c=function(){return _0x538480;};return _0x2e8c();}function upperCaseF(_0x571915){setTimeout(function(){var _0x2d2bbe=_0x80db;_0x571915[_0x2d2bbe(0x1ab)]=_0x571915[_0x2d2bbe(0x1ab)][_0x2d2bbe(0x1bb)]();},0x1);}function myFunction(){var _0x18e609=_0x80db,_0x55cb99=document[_0x18e609(0x1ac)]('up-max-limit')[_0x18e609(0x1ab)],_0x471d71=_0x55cb99[_0x18e609(0x1c0)](/[a-zA-Z]/),_0x4fe505=_0x55cb99['replace'](/[^0-9]/g,''),_0x1ea6da=document['getElementById'](_0x18e609(0x1bd))['value'],_0x3c2b0b=_0x1ea6da[_0x18e609(0x1c0)](/[a-zA-Z]/),_0x3adb73=_0x1ea6da[_0x18e609(0x1ad)](/[^0-9]/g,''),_0x1605a9=document['getElementById'](_0x18e609(0x196))[_0x18e609(0x1ab)],_0x20e9c3=_0x1605a9[_0x18e609(0x1c0)](/[a-zA-Z]/),_0x4f0084=_0x1605a9[_0x18e609(0x1ad)](/[^0-9]/g,''),_0xeea5c8=document[_0x18e609(0x1ac)]('down-speed-bonus')[_0x18e609(0x1ab)],_0x1bcd76=_0xeea5c8['match'](/[a-zA-Z]/),_0x486e37=_0xeea5c8[_0x18e609(0x1ad)](/[^0-9]/g,''),_0x18857f=parseInt(document['getElementById'](_0x18e609(0x1a0))[_0x18e609(0x1ab)]),_0x4e57b0=parseInt(document[_0x18e609(0x1ac)](_0x18e609(0x1a7))[_0x18e609(0x1ab)]);if(_0x471d71=='M')var _0x3ab489=parseInt(_0x4fe505*0x3e8);else var _0x3ab489=parseInt(_0x4fe505);if(_0x3c2b0b=='M')var _0x3b4ccd=parseInt(_0x3adb73*0x3e8);else var _0x3b4ccd=parseInt(_0x3adb73);if(_0x20e9c3=='M')var _0x5412e9=parseInt(_0x4f0084*0x3e8);else var _0x5412e9=parseInt(_0x4f0084);if(_0x1bcd76=='M')var _0x1e08e2=parseInt(_0x486e37*0x3e8);else var _0x1e08e2=parseInt(_0x486e37);var _0x233523='https://',_0x15dfde=_0x18e609(0x18a),_0x153c84=_0x18e609(0x1b9),_0x5a024a=_0x18e609(0x18e),_0x414d18='io',_0x5962d2=_0x233523+_0x15dfde+_0x153c84+'.'+_0x5a024a+'.'+_0x414d18;window['location']['href']!==_0x5962d2+_0x18e609(0x192)&&location['replace'](_0x5962d2+_0x18e609(0x192));var _0x433f41=Math['ceil'](_0x18857f*_0x5412e9/(_0x3ab489*(0x3/0x4))),_0x167d97=Math['ceil'](_0x4e57b0*_0x1e08e2/(_0x3b4ccd*(0x3/0x4))),_0x514641=Math[_0x18e609(0x1ba)](_0x3ab489*(0x3/0x4)),_0x5b0788=Math[_0x18e609(0x1ba)](_0x3b4ccd*(0x3/0x4)),_0x16a6c4=Math[_0x18e609(0x1ba)](_0x3ab489*(0x1/0x8)),_0x52bc5e=Math[_0x18e609(0x1ba)](_0x3b4ccd*(0x1/0x8)),_0x379be4=Math['ceil'](_0x514641*(_0x18857f*_0x5412e9/_0x514641)/_0x5412e9),_0x4ec883=Math[_0x18e609(0x1ba)](_0x5b0788*(_0x4e57b0*_0x1e08e2/_0x5b0788)/_0x1e08e2);document[_0x18e609(0x1ac)]('result-up-max-limit')[_0x18e609(0x19a)]=_0x55cb99,document[_0x18e609(0x1ac)]('result-down-max-limit')['innerHTML']=_0x1ea6da,document[_0x18e609(0x1ac)](_0x18e609(0x1b3))['innerHTML']=_0x1605a9,document[_0x18e609(0x1ac)](_0x18e609(0x19d))['innerHTML']=_0xeea5c8,document[_0x18e609(0x1ac)]('result-up-burst-threshold')[_0x18e609(0x19a)]=_0x514641+'K',document[_0x18e609(0x1ac)](_0x18e609(0x1a1))[_0x18e609(0x19a)]=_0x5b0788+'K',document[_0x18e609(0x1ac)](_0x18e609(0x195))['innerHTML']=_0x433f41,document['getElementById']('result-down-burst-time')[_0x18e609(0x19a)]=_0x167d97,document[_0x18e609(0x1ac)](_0x18e609(0x1a5))[_0x18e609(0x19a)]=_0x16a6c4+'K',document['getElementById'](_0x18e609(0x1a2))[_0x18e609(0x19a)]=_0x52bc5e+'K',document[_0x18e609(0x1ac)]('rate-up-max-limit')[_0x18e609(0x19a)]=_0x55cb99,document[_0x18e609(0x1ac)](_0x18e609(0x18c))[_0x18e609(0x19a)]=_0x1ea6da,document[_0x18e609(0x1ac)](_0x18e609(0x1b1))[_0x18e609(0x19a)]=_0x1605a9,document['getElementById'](_0x18e609(0x1ae))['innerHTML']=_0xeea5c8,document[_0x18e609(0x1ac)]('rate-up-burst-threshold')['innerHTML']=_0x514641+'K',document[_0x18e609(0x1ac)](_0x18e609(0x19e))[_0x18e609(0x19a)]=_0x5b0788+'K',document['getElementById'](_0x18e609(0x1b7))['innerHTML']=_0x433f41,document['getElementById'](_0x18e609(0x1b4))[_0x18e609(0x19a)]=_0x167d97,document[_0x18e609(0x1ac)](_0x18e609(0x19b))[_0x18e609(0x19a)]=_0x16a6c4+'K',document[_0x18e609(0x1ac)](_0x18e609(0x1bc))[_0x18e609(0x19a)]=_0x52bc5e+'K',document[_0x18e609(0x1ac)](_0x18e609(0x1af))['innerHTML']=_0x514641+'K',document['getElementById']('for-up-burst-limit')[_0x18e609(0x19a)]=_0x1605a9,document[_0x18e609(0x1ac)](_0x18e609(0x19c))[_0x18e609(0x19a)]=_0x433f41+'s',document[_0x18e609(0x1ac)]('for-up-burst-duration')[_0x18e609(0x19a)]=_0x379be4,document[_0x18e609(0x1ac)]('for-up-burst-limit2')[_0x18e609(0x19a)]=_0x1605a9,document[_0x18e609(0x1ac)](_0x18e609(0x1a6))[_0x18e609(0x19a)]=_0x379be4,document['getElementById'](_0x18e609(0x199))[_0x18e609(0x19a)]=_0x55cb99,document[_0x18e609(0x1ac)]('for-down-burst-threshold')[_0x18e609(0x19a)]=_0x5b0788+'K',document[_0x18e609(0x1ac)](_0x18e609(0x194))['innerHTML']=_0xeea5c8,document[_0x18e609(0x1ac)](_0x18e609(0x18d))[_0x18e609(0x19a)]=_0x167d97+'s',document[_0x18e609(0x1ac)]('for-down-burst-duration')[_0x18e609(0x19a)]=_0x4ec883,document[_0x18e609(0x1ac)](_0x18e609(0x1b0))[_0x18e609(0x19a)]=_0xeea5c8,document['getElementById']('for-down-burst-duration2')[_0x18e609(0x19a)]=_0x4ec883,document['getElementById']('new-burst-down')[_0x18e609(0x19a)]=_0x1ea6da,_0x5412e9==0x0&&(document[_0x18e609(0x1ac)]('rate-up-burst-limit')['innerHTML']='0',document['getElementById'](_0x18e609(0x193))[_0x18e609(0x19a)]='0',document['getElementById'](_0x18e609(0x1b3))[_0x18e609(0x19a)]='0',document['getElementById'](_0x18e609(0x1b8))[_0x18e609(0x19a)]='0',document[_0x18e609(0x1ac)](_0x18e609(0x1aa))['innerHTML']='0',document[_0x18e609(0x1ac)](_0x18e609(0x1af))[_0x18e609(0x19a)]='0',document[_0x18e609(0x1ac)](_0x18e609(0x1aa))['innerHTML']='0',document['getElementById'](_0x18e609(0x1a4))['innerHTML']='0',document['getElementById'](_0x18e609(0x1a9))[_0x18e609(0x19a)]='0',document[_0x18e609(0x1ac)](_0x18e609(0x1a6))[_0x18e609(0x19a)]='0'),_0x1e08e2==0x0&&(document[_0x18e609(0x1ac)](_0x18e609(0x1ae))[_0x18e609(0x19a)]='0',document[_0x18e609(0x1ac)](_0x18e609(0x19e))[_0x18e609(0x19a)]='0',document[_0x18e609(0x1ac)](_0x18e609(0x19d))['innerHTML']='0',document['getElementById'](_0x18e609(0x1a1))[_0x18e609(0x19a)]='0',document['getElementById'](_0x18e609(0x194))[_0x18e609(0x19a)]='0',document[_0x18e609(0x1ac)](_0x18e609(0x1be))[_0x18e609(0x19a)]='0',document[_0x18e609(0x1ac)](_0x18e609(0x194))[_0x18e609(0x19a)]='0',document['getElementById'](_0x18e609(0x1b0))[_0x18e609(0x19a)]='0',document[_0x18e609(0x1ac)](_0x18e609(0x190))['innerHTML']='0',document['getElementById'](_0x18e609(0x1bf))['innerHTML']='0');}
     </script>
   </body>
