--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -104,9 +104,9 @@
       width:auto;
       color:#ddd;
       }
-	 h2 {
-	 color:#ff6600;;
-	 }	  
+      h2 {
+      color:#ff6600;;
+      }	  
       h1 {
       color:#ddd;
       font-size:24px;
@@ -301,17 +301,11 @@
       table, tr, td {
       border: none;
       }
-
-
-
-
- 
-	  
-     </style> 
- <link rel="stylesheet" href="./login/login.css">
+    </style>
+    <link rel="stylesheet" href="./login/login.css">
   </head>
   <body>
-   	<script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>  
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script> 
@@ -382,21 +376,21 @@
                   <b>/ip firewall nat</b><br>
                   add chain=dstnat src-address-list=EXPIRED  protocol=tcp dst-port=80,443 action=redirect to-ports=<span style="color:#ff6600; font-weight:bold" id="result-nat-port">8082</span> comment="EXPIRED By BNT"<br>
                   <b>/ppp profile</b><br>
-					add comment="EXPIRED By BNT" local-address=<span style="color:#ff6600; font-weight:bold" id="result-ppp-profile">10.20.20.1</span> name=EXPIRED on-down=":local username \$\"user\";\r\
-    \n/ip proxy access remove [find comment=\"ppp-\$username\"];\r\
-    \n/ip firewall address-list remove [find comment=\"ppp-\$username\"];" on-up=":local username \$\"user\";\r\
-    \n:local address \$\"remote-address\";\r\
-    \n/ip proxy access add action=deny src-address=\$address comment=\"ppp-\$username\";\r\
-    \n/ip firewall address-list add list=EXPIRED address=\$address comment=\"ppp-\$username\"" remote-address=EXPIRED
-					<br>
-				  <b>/ip hotspot user profile</b><br>
-					add add-mac-cookie=no address-pool=EXPIRED !mac-cookie-timeout name=EXPIRED on-login=":local username \$\"user\";\r\
-    \n:local ipaddress \$\"address\";\r\
-    \n/ip proxy access add action=deny src-address=\$ipaddress comment=\"hs-\$username\";\r\
-    \n/ip firewall address-list add list=EXPIRED address=\$address comment=\"hs-\$username\"" on-logout=":local username \$user;\r\
-    \n/ip hotspot cookie remove [find user=\$username]\r\
-    \n/ip proxy access remove [find comment=\"hs-\$username\"]\r\
-    \n/ip firewall address-list remove [find comment=\"hs-\$username\"];" shared-users=100<br>
+                  add comment="EXPIRED By BNT" local-address=<span style="color:#ff6600; font-weight:bold" id="result-ppp-profile">10.20.20.1</span> name=EXPIRED on-down=":local username \$\"user\";\r\
+                  \n/ip proxy access remove [find comment=\"ppp-\$username\"];\r\
+                  \n/ip firewall address-list remove [find comment=\"ppp-\$username\"];" on-up=":local username \$\"user\";\r\
+                  \n:local address \$\"remote-address\";\r\
+                  \n/ip proxy access add action=deny src-address=\$address comment=\"ppp-\$username\";\r\
+                  \n/ip firewall address-list add list=EXPIRED address=\$address comment=\"ppp-\$username\"" remote-address=EXPIRED
+                  <br>
+                  <b>/ip hotspot user profile</b><br>
+                  add add-mac-cookie=no address-pool=EXPIRED !mac-cookie-timeout name=EXPIRED on-login=":local username \$\"user\";\r\
+                  \n:local ipaddress \$\"address\";\r\
+                  \n/ip proxy access add action=deny src-address=\$ipaddress comment=\"hs-\$username\";\r\
+                  \n/ip firewall address-list add list=EXPIRED address=\$address comment=\"hs-\$username\"" on-logout=":local username \$user;\r\
+                  \n/ip hotspot cookie remove [find user=\$username]\r\
+                  \n/ip proxy access remove [find comment=\"hs-\$username\"]\r\
+                  \n/ip firewall address-list remove [find comment=\"hs-\$username\"];" shared-users=100<br>
                   <b>/ip hotspot walled-garden ip</b><br>
                   add action=accept disabled=no !dst-address !dst-address-list dst-port=<span style="color:#ff6600; font-weight:bold" id="result-wallet-garden-port">8082</span> protocol=tcp !src-address !src-address-list comment="EXPIRED By BNT"<br>
                 </td>
@@ -408,12 +402,12 @@
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
           <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px" class="d-link"><a class="download" href="#" download="error.html">Download error.html</a></span><br>
           <div class="list-mangle2">
-            <center>
+            <div style="text-align:center">
               <span id="msg-title" style="color:#fff; font-weight:bold; font-size:70px;">EXPIRED!</span><br>
               <span id="msg-body" style="color:#fff; font-weight:bold; font-size:15px;line-height:2.0">
               DEAR CUSTOMER, WE INFORM YOU THAT YOUR INTERNET SERVICE IS CURRENTLY ISOLATED. PLEASE MAKE PAYMENT OF THE BILL THROUGH THE ACCOUNT WE PROVIDE. IN ORDER FOR THE INTERNET SERVICE TO REMAIN ACTIVE, IT IS REQUESTED TO MAKE A PAYMENT BEFORE THE DUE DATE OF EACH MONTH.</span><br><br>
               <span id="msg-contact" style="color:#fff; font-weight:bold; font-size:15px;;line-height:2.0">Contact Owner: +62 813-2222-3333</span><br>
-            </center>
+            </div>
           </div>
           <br>
         </div>
@@ -441,7 +435,7 @@
         /ip address remove [find comment="EXPIRED By BNT"]<br>
       </div>
     </div>
-    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"></div>	
+    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"></div>
     <div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
@@ -457,7 +451,7 @@
               <input type="password" id="registration-password" placeholder="Password">
               <button style="width:100% !important;" id="register">Sign Up</button><br>
               <span style="font-weight:normal !important; float:right"><span id="show-login">Already a member? Sign-In</span></span>
-			  <br>
+              <br>
             </div>
             <div id="login-page">
               <h2>SIGN IN</h2>
@@ -482,11 +476,11 @@
       <div class="modal-content">
         <span class="close">&times;</span>
         <div style="font-size:22px;font-weight:bold">Want to give me a Gift ?</div>
-		<div style="font-size:16px;font-weight:bold;margin-bottom:17px; margin-top:10px">
-        <p><b>PayPal</b> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
-        <p><b>Saweria</b> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
-        <p><b>Buymeacoffee</b> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://www.buymeacoffee.com/bntpbun">buymeacoffee.com/bntpbun</a></p>
-        <p><b>Bitcoin</b> <span style="font-size:11px;color:#ff6600;">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
+        <div style="font-size:16px;font-weight:bold;margin-bottom:17px; margin-top:10px">
+          <p><b>PayPal</b> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
+          <p><b>Saweria</b> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
+          <p><b>Buymeacoffee</b> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://www.buymeacoffee.com/bntpbun">buymeacoffee.com/bntpbun</a></p>
+          <p><b>Bitcoin</b> <span style="font-size:11px;color:#ff6600;">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
         </div>
         <div style="float:left;margin-right:3px; margin-top:0px">
           <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
@@ -496,13 +490,11 @@
           <a class="github-button" href="https://github.com/buananetpbun/buananetpbun.github.io" data-icon="octicon-star" data-show-count="true" aria-label="star">Star</a>
           <a class="github-button" href="https://github.com/sponsors/buananetpbun" data-icon="octicon-heart" aria-label="Sponsor">Sponsor</a>	
         </div>
+      </div>
     </div>
-    </div>
-		<script src="./login/login.js"></script>		
+    <script src="./login/login.js"></script>		
     <script>
-
- 
-    var _0x8213fa=_0x4a9d;function _0x4aff(){var _0x1a8406=['buananet','7007931bzhOZL','</div><div\x20style=\x27font-size:2vw;line-height:2.0;\x27>','createRange','data:text;base64,','selectNode','</div><div\x20style=\x27font-size:10px;\x27>Script\x20Generator\x20by\x20buananetpbun.github.io</div></div></center></body></html></html>','499020RukvdT','copy','result-proxy-port','result-address-list','5134818UjBiju','result-nat-port','interface-name','getSelection','addRange','replace','location','toLocaleString','252308pXkVtl','ip-address','querySelector','result-wallet-garden-port','.2-','msg-body','/mikrotik-expired-isolate-pppoe-hotspot.html','toUpperCase','result-proxy-port2','createTextRange','result-ip-pool','innerHTML','href','msg-contact','removeAllRanges','644158qIwcxS','getElementById','msg-title','value','github','input-msg-title','result-ppp-profile','377202zVuasr','pbun','<!DOCTYPE\x20html><html><meta\x20name=\x27viewport\x27\x20content=\x27width=device-width,\x20initial-scale=1.0\x27><style>body{font-family:\x20montserrat,\x20sans-serif;font-weight:700;color:#fff;background-color:#ff6600;ms-text-size-adjust:\x20100%;-webkit-text-size-adjust:100%;} </style><body><center><div\x20style=\x27padding:50px\x27><div\x20style=\x27font-size:10vw;\x27>','65QkeZtV','.0/24','4877056vNCoqK','lastIndexOf','tanggalwaktu'];_0x4aff=function(){return _0x1a8406;};return _0x4aff();}(function(_0x341b47,_0x16506b){var _0x5bae09=_0x4a9d,_0x394361=_0x341b47();while(!![]){try{var _0x3680ba=parseInt(_0x5bae09(0xaf))/0x1+-parseInt(_0x5bae09(0xb6))/0x2+-parseInt(_0x5bae09(0xc5))/0x3+parseInt(_0x5bae09(0xa0))/0x4*(parseInt(_0x5bae09(0xb9))/0x5)+-parseInt(_0x5bae09(0xc9))/0x6+parseInt(_0x5bae09(0xbf))/0x7+-parseInt(_0x5bae09(0xbb))/0x8;if(_0x3680ba===_0x16506b)break;else _0x394361['push'](_0x394361['shift']());}catch(_0x40b086){_0x394361['push'](_0x394361['shift']());}}}(_0x4aff,0x9d734));var dt=new Date();document[_0x8213fa(0xb0)](_0x8213fa(0xbd))[_0x8213fa(0xab)]=dt[_0x8213fa(0x9f)]();function upperCaseF(_0x1c7d58){setTimeout(function(){var _0x49ff40=_0x4a9d;_0x1c7d58[_0x49ff40(0xb2)]=_0x1c7d58['value'][_0x49ff40(0xa7)]();},0x1);}function _0x4a9d(_0x4a3431,_0x24f72e){var _0x4affea=_0x4aff();return _0x4a9d=function(_0x4a9db8,_0x44f6dd){_0x4a9db8=_0x4a9db8-0x9b;var _0x2e3b65=_0x4affea[_0x4a9db8];return _0x2e3b65;},_0x4a9d(_0x4a3431,_0x24f72e);}function myFunction(){var _0x41831a=_0x8213fa,_0x4fbc10=document[_0x41831a(0xb0)]('input-msg-body')[_0x41831a(0xb2)],_0x4437e9=document[_0x41831a(0xb0)](_0x41831a(0xb4))[_0x41831a(0xb2)],_0x1a9e95=document['getElementById']('input-msg-contact')['value'],_0xfae4b9=document[_0x41831a(0xb0)](_0x41831a(0xa1))['value'],_0x1965aa=document[_0x41831a(0xb0)]('proxy-port')[_0x41831a(0xb2)],_0x18a4d6=document['getElementById'](_0x41831a(0xcb))['value'],_0x47385f='https://',_0x435a39=_0x41831a(0xbe),_0x34e6c8=_0x41831a(0xb7),_0x5a2658=_0x41831a(0xb3),_0x4f3d19='io',_0x3dfa4=_0x47385f+_0x435a39+_0x34e6c8+'.'+_0x5a2658+'.'+_0x4f3d19;window[_0x41831a(0x9e)][_0x41831a(0xac)]!==_0x3dfa4+_0x41831a(0xa6)&&location[_0x41831a(0x9d)](_0x3dfa4+_0x41831a(0xa6));var _0x54eed8=_0xfae4b9,_0x10b96c=_0x54eed8['substring'](0x0,_0x54eed8[_0x41831a(0xbc)]('.'));document[_0x41831a(0xb0)]('result-proxy-ip')[_0x41831a(0xab)]=_0x10b96c+_0x41831a(0xba),document[_0x41831a(0xb0)](_0x41831a(0xaa))[_0x41831a(0xab)]=_0x10b96c+_0x41831a(0xa4)+_0x10b96c+'.254',document[_0x41831a(0xb0)]('result-ip-address')[_0x41831a(0xab)]=_0x54eed8,document[_0x41831a(0xb0)](_0x41831a(0xc8))[_0x41831a(0xab)]=_0x10b96c+'.0/24',document[_0x41831a(0xb0)](_0x41831a(0xb5))[_0x41831a(0xab)]=_0x10b96c+'.1',document['getElementById']('result-set-port-proxy')[_0x41831a(0xab)]=_0x1965aa,document[_0x41831a(0xb0)](_0x41831a(0xc7))[_0x41831a(0xab)]=_0x1965aa,document[_0x41831a(0xb0)](_0x41831a(0xa8))[_0x41831a(0xab)]=_0x1965aa,document[_0x41831a(0xb0)](_0x41831a(0xca))[_0x41831a(0xab)]=_0x1965aa,document[_0x41831a(0xb0)](_0x41831a(0xa3))['innerHTML']=_0x1965aa,document[_0x41831a(0xb0)]('result-interface')[_0x41831a(0xab)]=_0x18a4d6,document[_0x41831a(0xb0)](_0x41831a(0xb1))[_0x41831a(0xab)]=_0x4437e9,document[_0x41831a(0xb0)](_0x41831a(0xa5))['innerHTML']=_0x4fbc10,document[_0x41831a(0xb0)](_0x41831a(0xad))[_0x41831a(0xab)]=_0x1a9e95;var _0x5f08a9=_0x41831a(0xb8)+_0x4437e9+_0x41831a(0xc0)+_0x4fbc10+'</div><br><div\x20style=\x27font-size:2vw;line-height:2.0;\x27>'+_0x1a9e95+_0x41831a(0xc4);document[_0x41831a(0xa2)]('.download')['href']=_0x41831a(0xc2)+btoa(_0x5f08a9);}function selectElementContents(_0xc0bf88){var _0x2d4ade=_0x8213fa,_0x133b30=document['body'],_0x52131f,_0x5508e9;if(document[_0x2d4ade(0xc1)]&&window[_0x2d4ade(0x9b)]){_0x52131f=document[_0x2d4ade(0xc1)](),_0x5508e9=window[_0x2d4ade(0x9b)](),_0x5508e9[_0x2d4ade(0xae)]();try{_0x52131f['selectNodeContents'](_0xc0bf88),_0x5508e9[_0x2d4ade(0x9c)](_0x52131f);}catch(_0x2a5389){_0x52131f[_0x2d4ade(0xc3)](_0xc0bf88),_0x5508e9[_0x2d4ade(0x9c)](_0x52131f);}}else _0x133b30['createTextRange']&&(_0x52131f=_0x133b30[_0x2d4ade(0xa9)](),_0x52131f['moveToElementText'](_0xc0bf88),_0x52131f['select']());document['execCommand'](_0x2d4ade(0xc6));}
+      var _0x8213fa=_0x4a9d;function _0x4aff(){var _0x1a8406=['buananet','7007931bzhOZL','</div><div\x20style=\x27font-size:2vw;line-height:2.0;\x27>','createRange','data:text;base64,','selectNode','</div><div\x20style=\x27font-size:10px;\x27>Script\x20Generator\x20by\x20buananetpbun.github.io</div></div></center></body></html></html>','499020RukvdT','copy','result-proxy-port','result-address-list','5134818UjBiju','result-nat-port','interface-name','getSelection','addRange','replace','location','toLocaleString','252308pXkVtl','ip-address','querySelector','result-wallet-garden-port','.2-','msg-body','/mikrotik-expired-isolate-pppoe-hotspot.html','toUpperCase','result-proxy-port2','createTextRange','result-ip-pool','innerHTML','href','msg-contact','removeAllRanges','644158qIwcxS','getElementById','msg-title','value','github','input-msg-title','result-ppp-profile','377202zVuasr','pbun','<!DOCTYPE\x20html><html><meta\x20name=\x27viewport\x27\x20content=\x27width=device-width,\x20initial-scale=1.0\x27><style>body{font-family:\x20montserrat,\x20sans-serif;font-weight:700;color:#fff;background-color:#ff6600;ms-text-size-adjust:\x20100%;-webkit-text-size-adjust:100%;} </style><body><center><div\x20style=\x27padding:50px\x27><div\x20style=\x27font-size:10vw;\x27>','65QkeZtV','.0/24','4877056vNCoqK','lastIndexOf','tanggalwaktu'];_0x4aff=function(){return _0x1a8406;};return _0x4aff();}(function(_0x341b47,_0x16506b){var _0x5bae09=_0x4a9d,_0x394361=_0x341b47();while(!![]){try{var _0x3680ba=parseInt(_0x5bae09(0xaf))/0x1+-parseInt(_0x5bae09(0xb6))/0x2+-parseInt(_0x5bae09(0xc5))/0x3+parseInt(_0x5bae09(0xa0))/0x4*(parseInt(_0x5bae09(0xb9))/0x5)+-parseInt(_0x5bae09(0xc9))/0x6+parseInt(_0x5bae09(0xbf))/0x7+-parseInt(_0x5bae09(0xbb))/0x8;if(_0x3680ba===_0x16506b)break;else _0x394361['push'](_0x394361['shift']());}catch(_0x40b086){_0x394361['push'](_0x394361['shift']());}}}(_0x4aff,0x9d734));var dt=new Date();document[_0x8213fa(0xb0)](_0x8213fa(0xbd))[_0x8213fa(0xab)]=dt[_0x8213fa(0x9f)]();function upperCaseF(_0x1c7d58){setTimeout(function(){var _0x49ff40=_0x4a9d;_0x1c7d58[_0x49ff40(0xb2)]=_0x1c7d58['value'][_0x49ff40(0xa7)]();},0x1);}function _0x4a9d(_0x4a3431,_0x24f72e){var _0x4affea=_0x4aff();return _0x4a9d=function(_0x4a9db8,_0x44f6dd){_0x4a9db8=_0x4a9db8-0x9b;var _0x2e3b65=_0x4affea[_0x4a9db8];return _0x2e3b65;},_0x4a9d(_0x4a3431,_0x24f72e);}function myFunction(){var _0x41831a=_0x8213fa,_0x4fbc10=document[_0x41831a(0xb0)]('input-msg-body')[_0x41831a(0xb2)],_0x4437e9=document[_0x41831a(0xb0)](_0x41831a(0xb4))[_0x41831a(0xb2)],_0x1a9e95=document['getElementById']('input-msg-contact')['value'],_0xfae4b9=document[_0x41831a(0xb0)](_0x41831a(0xa1))['value'],_0x1965aa=document[_0x41831a(0xb0)]('proxy-port')[_0x41831a(0xb2)],_0x18a4d6=document['getElementById'](_0x41831a(0xcb))['value'],_0x47385f='https://',_0x435a39=_0x41831a(0xbe),_0x34e6c8=_0x41831a(0xb7),_0x5a2658=_0x41831a(0xb3),_0x4f3d19='io',_0x3dfa4=_0x47385f+_0x435a39+_0x34e6c8+'.'+_0x5a2658+'.'+_0x4f3d19;window[_0x41831a(0x9e)][_0x41831a(0xac)]!==_0x3dfa4+_0x41831a(0xa6)&&location[_0x41831a(0x9d)](_0x3dfa4+_0x41831a(0xa6));var _0x54eed8=_0xfae4b9,_0x10b96c=_0x54eed8['substring'](0x0,_0x54eed8[_0x41831a(0xbc)]('.'));document[_0x41831a(0xb0)]('result-proxy-ip')[_0x41831a(0xab)]=_0x10b96c+_0x41831a(0xba),document[_0x41831a(0xb0)](_0x41831a(0xaa))[_0x41831a(0xab)]=_0x10b96c+_0x41831a(0xa4)+_0x10b96c+'.254',document[_0x41831a(0xb0)]('result-ip-address')[_0x41831a(0xab)]=_0x54eed8,document[_0x41831a(0xb0)](_0x41831a(0xc8))[_0x41831a(0xab)]=_0x10b96c+'.0/24',document[_0x41831a(0xb0)](_0x41831a(0xb5))[_0x41831a(0xab)]=_0x10b96c+'.1',document['getElementById']('result-set-port-proxy')[_0x41831a(0xab)]=_0x1965aa,document[_0x41831a(0xb0)](_0x41831a(0xc7))[_0x41831a(0xab)]=_0x1965aa,document[_0x41831a(0xb0)](_0x41831a(0xa8))[_0x41831a(0xab)]=_0x1965aa,document[_0x41831a(0xb0)](_0x41831a(0xca))[_0x41831a(0xab)]=_0x1965aa,document[_0x41831a(0xb0)](_0x41831a(0xa3))['innerHTML']=_0x1965aa,document[_0x41831a(0xb0)]('result-interface')[_0x41831a(0xab)]=_0x18a4d6,document[_0x41831a(0xb0)](_0x41831a(0xb1))[_0x41831a(0xab)]=_0x4437e9,document[_0x41831a(0xb0)](_0x41831a(0xa5))['innerHTML']=_0x4fbc10,document[_0x41831a(0xb0)](_0x41831a(0xad))[_0x41831a(0xab)]=_0x1a9e95;var _0x5f08a9=_0x41831a(0xb8)+_0x4437e9+_0x41831a(0xc0)+_0x4fbc10+'</div><br><div\x20style=\x27font-size:2vw;line-height:2.0;\x27>'+_0x1a9e95+_0x41831a(0xc4);document[_0x41831a(0xa2)]('.download')['href']=_0x41831a(0xc2)+btoa(_0x5f08a9);}function selectElementContents(_0xc0bf88){var _0x2d4ade=_0x8213fa,_0x133b30=document['body'],_0x52131f,_0x5508e9;if(document[_0x2d4ade(0xc1)]&&window[_0x2d4ade(0x9b)]){_0x52131f=document[_0x2d4ade(0xc1)](),_0x5508e9=window[_0x2d4ade(0x9b)](),_0x5508e9[_0x2d4ade(0xae)]();try{_0x52131f['selectNodeContents'](_0xc0bf88),_0x5508e9[_0x2d4ade(0x9c)](_0x52131f);}catch(_0x2a5389){_0x52131f[_0x2d4ade(0xc3)](_0xc0bf88),_0x5508e9[_0x2d4ade(0x9c)](_0x52131f);}}else _0x133b30['createTextRange']&&(_0x52131f=_0x133b30[_0x2d4ade(0xa9)](),_0x52131f['moveToElementText'](_0xc0bf88),_0x52131f['select']());document['execCommand'](_0x2d4ade(0xc6));}
     </script>
   </body>
 </html>
