--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -823,6 +823,7 @@
         </div>
       </div>
     </div>
+    <div id="dialogoverlay"></div><div id="dialogbox"><div><div id="dialogboxhead"></div><div id="dialogboxbody"></div><div id="dialogboxfoot"></div></div></div> 
     <script src="./login/login.js"></script>	
   </body>
 </html>
